# causal-emergence-zoo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: cycle_4.json  degenerate_3.json  mesoscale_cycle_6.json  two_block_noisy_4.json
docs/: adapter-guide.md  adding-benchmarks.md  algorithm-harmonization-spec-change.md  benchmark-design.md  compatibility-levels.md  concepts.md  conventions.md  input-format.md  problem-statement.md
docs/benchmarks/: README.md  cycle_4.md  degenerate_3.md  hierarchical_two_cycle_8.md  identity_3.md  mesoscale_cycle_6.md  preferential_attachment_alpha0_8.md  preferential_attachment_alpha2_8.md  two_block_noisy_4.md
examples/: benchmark-input.template.json  ce2-multiscale-exploratory.example.json  engineering-emergence-qualitative.example.json  engineering-emergence-result.example.json  implementation-result.example.json  network-ei-result.example.json  rank-agreement.example.json  svd-equivalent-macro.example.json
generators/: __init__.py  generate_starter_systems.py
notebooks/: README.md
schemas/: benchmark-input.schema.json  benchmark-system.schema.json  implementation-result.schema.json
src/causal_emergence_zoo/: __init__.py  __main__.py  cli.py  coarse_grain.py  io.py  metrics.py  partitions.py  plotting.py  search.py  validation.py
src/causal_emergence_zoo/data/: identity_3.json
tests/: test_cli.py  test_fixtures.py  test_metrics.py  test_partitions.py  test_search.py
