[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-emergence-zoo"
version = "0.1.0"
description = "Benchmark systems and expected outputs for causal emergence research."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Thomas Hampton", email = "ThomasRHampton@gmail.com" },
  { name = "causal-emergence-zoo contributors" }
]
keywords = [
  "causal emergence",
  "benchmark",
  "Markov chains",
  "transition probability matrices",
  "coarse graining"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering"
]
dependencies = ["jsonschema>=4.22"]

[project.scripts]
cez = "causal_emergence_zoo.cli:main"

[project.urls]
Homepage = "https://github.com/tsauce32/causal-emergence-zoo"
Repository = "https://github.com/tsauce32/causal-emergence-zoo"
Issues = "https://github.com/tsauce32/causal-emergence-zoo/issues"

[project.optional-dependencies]
plots = ["matplotlib>=3.8"]
dev = ["build>=1", "pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
causal_emergence_zoo = ["data/*.json", "schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
